# coffee-api

./: .gitignore  README.md  config.py  pyproject.toml
app/: __init__.py  insert_docs.py  models.py
app/coffee/: __init__.py  views.py
tests/: conftest.py  test_basics.py  test_models.py
