[tool.poetry]
name = "coffee-api"
version = "0.1.0"
description = "e-commerce API for selling coffee machines and coffee pods"
authors = ["Ahmed Elmaghallawy <ahmedelmaghallawy@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-mongoengine = "^0.9.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.4"
pytest = "^6.0.2"
mongomock = "^3.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
